# rdAccess

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  buildVars.py  changelog.md  prek.toml  pyproject.toml  readme.md  ruff.toml  sconstruct  style.css
.github/workflows/: automaticRelease.yaml  build_addon.yml  check-for-extended-ascii-and-utf-bom.yaml  l10n.yaml  lint.yaml  manualRelease.yaml  testWithNVDA.yaml  update_rd_pipe_dlls.yml
addon/: installTasks.py
addon/brailleDisplayDrivers/: remote.py
addon/dll/: .gitignore
addon/doc/bg/: readme.md
addon/doc/de/: readme.md
addon/doc/es/: readme.md
addon/doc/fi/: readme.md
addon/doc/fr/: readme.md
addon/doc/nl/: readme.md
addon/doc/pt_BR/: readme.md
addon/doc/ru/: readme.md
addon/doc/tr/: readme.md
addon/doc/uk/: readme.md
addon/doc/zh_CN/: readme.html  readme.md
addon/globalPlugins/: nvdaRd.py
addon/globalPlugins/nvdaRd/: __init__.py  configuration.py  directoryChanges.py  monkeyPatcher.py  objects.py  secureDesktop.py  settingsPanel.py  synthDetect.py
addon/globalPlugins/nvdaRd/handlers/: __init__.py  _remoteHandler.py  remoteBrailleHandler.py  remoteSpeechHandler.py
addon/globalPlugins/rdAccess/: __init__.py  diagnostics.py  directoryChanges.py  objects.py  rdPipeLogViewer.py  secureDesktop.py  secureDesktopHandling.py  settingsPanel.py  synthDetect.py
addon/globalPlugins/rdAccess/handlers/: __init__.py  _remoteHandler.py  remoteBrailleHandler.py  remoteSpeechHandler.py
addon/hwIo/: wtsVirtualChannel.py
addon/lib/: __init__.py  configuration.py  detection.py  dialogs.py  driver.py  inputTime.py  ioBaseEx.py  ioBaseThreadMixin.py  ioThreadEx.py  namedPipe.py  protocol.py  rdPipe.py  secureDesktop.py  sessionTrackingEx.py  wtsVirtualChannel.py
addon/lib/driver/: __init__.py  settingsAccessor.py
addon/lib/protocol/: __init__.py  braille.py  speech.py
addon/locale/bg/LC_MESSAGES/: nvda.po
addon/locale/de/LC_MESSAGES/: nvda.po
addon/locale/es/LC_MESSAGES/: nvda.po
addon/locale/fi/LC_MESSAGES/: nvda.po
addon/locale/fr/LC_MESSAGES/: nvda.po
addon/locale/hr/LC_MESSAGES/: nvda.po
addon/locale/it/LC_MESSAGES/: nvda.po
addon/locale/nl/LC_MESSAGES/: nvda.po
addon/locale/pl/LC_MESSAGES/: nvda.po
addon/locale/pt_BR/LC_MESSAGES/: nvda.po
addon/locale/pt_PT/LC_MESSAGES/: nvda.po
addon/locale/ro/LC_MESSAGES/: nvda.po
addon/locale/ru/LC_MESSAGES/: nvda.po
addon/locale/tr/LC_MESSAGES/: nvda.po
addon/locale/uk/LC_MESSAGES/: nvda.po
addon/locale/zh_CN/LC_MESSAGES/: manifest.ini  nvda.mo  nvda.po
addon/synthDrivers/: remote.py
addon/synthDrivers/remote/: __init__.py  synthThread.py
site_scons/site_tools/NVDATool/: __init__.py  addon.py  manifests.py  typings.py
site_scons/site_tools/gettexttool/: __init__.py
tests/: __init__.py  _fakes.py  _stubs.py  test_attributeHandling.py  test_commandDispatch.py  test_framing.py  test_messages.py  test_misc.py
