[build-system]
requires = ["setuptools~=80.9", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RDAccess"
dynamic = ["version"]
description = "Allows using speech and braille with Microsoft Remote Desktop, Citrix Workspace, Parallels RAS and VMware Horizon"
maintainers = [
	{name = "Leonard de Ruijter", email = "alderuijter@gmail.com"},
]
requires-python = ">=3.13,<3.14"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: End Users/Desktop",
	"License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
	"Operating System :: Microsoft :: Windows",
	"Programming Language :: Python :: 3",
	"Topic :: Accessibility",
]
readme = "readme.md"
license = {file = "COPYING.TXT"}
dependencies = [
	# Build add-on
	"scons==4.10.1",
	"Markdown==3.10",
	# Translations management
	"requests==2.33.0",
	"nh3==0.3.2",
	"crowdin-api-client==1.24.1",
	"lxml==6.0.2",
	"mdx_truly_sane_lists==1.3",
	"markdown-link-attr-modifier==0.2.1",
	"mdx-gh-links==0.4",
	# Lint
	"uv==0.11.6",
	"ruff==0.15.12",
	"pre-commit==4.2.0"
]
[project.urls]
Repository = "https://github.com/LeonarddeR/RDAccess.git"
Issues = "https://github.com/LeonarddeR/RDAccess.git/issues"

[tool.ruff]
fix = true
preview = true
line-length = 110

builtins = [
	# translation lookup
	"_",
	# translation lookup
	"ngettext",
	# translation lookup
	"pgettext",
	# translation lookup
	"npgettext",
]

include = [
	"*.py",
	"sconstruct",
]

exclude = [
	".git",
	"__pycache__",
	".venv",
	"site_scons",
]

[tool.ruff.format]
indent-style = "tab"
line-ending = "lf"
preview = true
quote-style = "double"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint]
future-annotations = true
ignore = [
	# indentation contains tabs
	"W191",
]
logger-objects = ["logHandler.log"]
select = [
	"ARG",  # flake8-unused-arguments
	"B",  # flake8-bugbear
	"C4",  # flake8-comprehensions
	"C90", # mccabe
	"E",  # pycodestyle Error
	"F",  # Pyflakes
	"FIX",  # flake8-fixme
	"I",  # isort
	"ICN",  # flake8-import-conventions
	"INT",  # flake8-gettext
	"PERF",  # Perflint
	"PIE",  # flake8-pie
	"SIM",  # flake8-simplify
	"UP",  # pyupgrade
	"W",  # pycodestyle Warning
]

[tool.ruff.lint.per-file-ignores]
# sconscripts contains many inbuilt functions not recognised by the lint,
# so ignore F821.
"sconstruct" = ["F821"]
